# file-sql

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.claude/hooks/: _lib.sh  conventional-commit.sh  format-on-edit.sh  guard-irreversible.sh  session-context.sh
.claude/skills/audit/: SKILL.md
.claude/skills/capture/: SKILL.md
.claude/skills/gh/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/pre-pr/: SKILL.md
.claude/skills/slim/: SKILL.md
.github/workflows/: ci.yml
crates/file-sql/: Cargo.toml
crates/file-sql-core/: Cargo.toml
crates/file-sql-core/src/: config.rs  embedding.rs  error.rs  indexer.rs  lib.rs  model.rs  storage.rs  symbols.rs
crates/file-sql-core/src/storage/: mod.rs  postgres.rs  sqlite.rs
crates/file-sql/src/: main.rs  mcp.rs
docker/: docker-compose.postgres.yml
install/: install-pi-mcp.sh  install-skill.sh  install.sh
skill/: SKILL.md
