[package]
name = "file-sql-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
toml = "0.8"
tokio-rusqlite = "0.7"
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "=0.1.9"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres"] }
pgvector = { version = "0.4", features = ["sqlx"] }
ignore = "0.4"
fastembed = "5"
sha2 = "0.10"
hex = "0.4"
