[package]
name = "file-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "file-sql"
path = "src/main.rs"

[features]
default = []
model-embeddings = ["file-sql-core/model-embeddings"]

[dependencies]
file-sql-core = { path = "../file-sql-core" }
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp = { version = "2.2.0", features = ["server", "transport-io"] }
